[gd_scene load_steps=14 format=3 uid="uid://dqw5tvtpg06da"]

[ext_resource type="PackedScene" uid="uid://ckf7t25wu03rx" path="res://main/ground.tscn" id="1_c651c"]
[ext_resource type="PackedScene" uid="uid://txfaofpvs50r" path="res://entities/turret/turret.tscn" id="2_3wy1v"]
[ext_resource type="Script" uid="uid://pjxoqpi82rjn" path="res://main/bullet_container.gd" id="3_kfbq2"]
[ext_resource type="Script" uid="uid://dfftwfxeb1r1q" path="res://main/enemy_container.gd" id="4_4dugh"]
[ext_resource type="Script" uid="uid://x81q53847pew" path="res://main/world_walls.gd" id="5_3wy1v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kfbq2"]
size = Vector2(329, 905)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4dugh"]
size = Vector2(1784, 329)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_67ri8"]
size = Vector2(329, 900)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_grrlh"]
size = Vector2(1496, 488)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_3wy1v"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_kfbq2"]
normal = Vector2(0, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_4dugh"]
normal = Vector2(-1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_67ri8"]

[node name="Main" type="Node2D"]

[node name="Ground" parent="." instance=ExtResource("1_c651c")]
position = Vector2(0, 416)

[node name="Turret" parent="." instance=ExtResource("2_3wy1v")]
position = Vector2(576, 416)

[node name="BulletContainer" type="Node2D" parent="."]
script = ExtResource("3_kfbq2")

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true
autostart = true

[node name="EnemyContainer" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("4_4dugh")

[node name="EnemyMarkers" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Marker2D" type="Marker2D" parent="EnemyMarkers"]
position = Vector2(58, 18)

[node name="Marker2D2" type="Marker2D" parent="EnemyMarkers"]
position = Vector2(58, 50)

[node name="Marker2D3" type="Marker2D" parent="EnemyMarkers"]
position = Vector2(58, 82)

[node name="Marker2D4" type="Marker2D" parent="EnemyMarkers"]
position = Vector2(58, 114)

[node name="Marker2D5" type="Marker2D" parent="EnemyMarkers"]
position = Vector2(58, 146)

[node name="Marker2D6" type="Marker2D" parent="EnemyMarkers"]
position = Vector2(1090, 146)

[node name="Marker2D7" type="Marker2D" parent="EnemyMarkers"]
position = Vector2(1090, 114)

[node name="Marker2D8" type="Marker2D" parent="EnemyMarkers"]
position = Vector2(1090, 82)

[node name="Marker2D9" type="Marker2D" parent="EnemyMarkers"]
position = Vector2(1090, 50)

[node name="Marker2D10" type="Marker2D" parent="EnemyMarkers"]
position = Vector2(1090, 18)

[node name="WorldWalls" type="Node2D" parent="."]
script = ExtResource("5_3wy1v")

[node name="LeftWallArea2D" type="Area2D" parent="WorldWalls"]
position = Vector2(-155, 435)
collision_layer = 16
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldWalls/LeftWallArea2D"]
shape = SubResource("RectangleShape2D_kfbq2")

[node name="TopWallArea2D" type="Area2D" parent="WorldWalls"]
position = Vector2(580, -155)
collision_layer = 16
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldWalls/TopWallArea2D"]
shape = SubResource("RectangleShape2D_4dugh")

[node name="RightWallArea2D" type="Area2D" parent="WorldWalls"]
position = Vector2(1304, 448)
collision_layer = 16
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldWalls/RightWallArea2D"]
shape = SubResource("RectangleShape2D_67ri8")

[node name="BottomWallArea2D" type="Area2D" parent="WorldWalls"]
position = Vector2(724, 652)
collision_layer = 16
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldWalls/BottomWallArea2D"]
shape = SubResource("RectangleShape2D_grrlh")

[node name="LeftWallStaticBody2D" type="StaticBody2D" parent="WorldWalls"]
position = Vector2(16, 224)

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldWalls/LeftWallStaticBody2D"]
position = Vector2(-43.5, -31.5)
shape = SubResource("WorldBoundaryShape2D_3wy1v")

[node name="TopWallStaticBody2D" type="StaticBody2D" parent="WorldWalls"]
position = Vector2(576, -32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldWalls/TopWallStaticBody2D"]
shape = SubResource("WorldBoundaryShape2D_kfbq2")

[node name="RightWallStaticBody2D" type="StaticBody2D" parent="WorldWalls"]
position = Vector2(1184, 256)

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldWalls/RightWallStaticBody2D"]
shape = SubResource("WorldBoundaryShape2D_4dugh")

[node name="BottomWallStaticBody2D" type="StaticBody2D" parent="WorldWalls"]
position = Vector2(576, 416)

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldWalls/BottomWallStaticBody2D"]
shape = SubResource("WorldBoundaryShape2D_67ri8")

[connection signal="timeout" from="Timer" to="EnemyContainer" method="_on_timer_timeout"]
[connection signal="area_entered" from="WorldWalls/LeftWallArea2D" to="WorldWalls" method="_on_left_wall_area_2d_area_entered"]
[connection signal="area_exited" from="WorldWalls/LeftWallArea2D" to="WorldWalls" method="_on_left_wall_area_2d_area_exited"]
[connection signal="area_entered" from="WorldWalls/TopWallArea2D" to="WorldWalls" method="_on_top_wall_area_2d_area_entered"]
[connection signal="area_exited" from="WorldWalls/TopWallArea2D" to="WorldWalls" method="_on_top_wall_area_2d_area_exited"]
[connection signal="area_entered" from="WorldWalls/RightWallArea2D" to="WorldWalls" method="_on_right_wall_area_2d_area_entered"]
[connection signal="area_exited" from="WorldWalls/RightWallArea2D" to="WorldWalls" method="_on_right_wall_area_2d_area_exited"]
[connection signal="area_entered" from="WorldWalls/BottomWallArea2D" to="WorldWalls" method="_on_bottom_wall_area_2d_area_entered"]
[connection signal="area_exited" from="WorldWalls/BottomWallArea2D" to="WorldWalls" method="_on_bottom_wall_area_2d_area_exited"]
